# matter-poc1

./: .gitignore  README.md  build_m5nanoc6.sh
.github/workflows/: build-check.yml
docs/: apple-home-commissioning.md  ubuntu-setup.md  wsl-setup.md
m5nanoc6-temperature/: CMakeLists.txt  README.md  SETUP.md  partitions.csv  sdkconfig.defaults
m5nanoc6-temperature/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  app_openthread_config.h
m5nanoc6-temperature/main/drivers/: pir.cpp  shtc3.cpp  shtc3.h
nrf52840-dongle-temperature/: CMakeLists.txt  README.md  prj.conf
nrf52840-dongle-temperature/boards/: nrf52840dongle_nrf52840.overlay
nrf52840-dongle-temperature/src/: CHIPProjectConfig.h  main.cpp
